<resources>
    <string name="app_name">Password Generator</string>
    <string name="uppercase">Uppercase</string>
    <string name="lowercase">Lowercase</string>
    <string name="number">Number</string>
    <string name="specialCharacters">Special Characters</string>
    <string name="onlyDifferent">Avoid Repetitions</string>
    <string name="generate">Generate</string>
    <string name="length">Length:</string>
</resources>