<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtPswdGen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="36dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_uppercase"
        style="@style/txtOptions"
        android:layout_width="307dp"
        android:layout_height="45dp"
        android:text="@string/uppercase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintVertical_bias="0.052" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_lowercase"
        style="@style/txtOptions"
        android:layout_width="304dp"
        android:layout_height="45dp"
        android:text="@string/lowercase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_uppercase"
        app:layout_constraintVertical_bias="0.031" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_number"
        style="@style/txtOptions"
        android:layout_width="304dp"
        android:layout_height="45dp"
        android:text="@string/number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_lowercase"
        app:layout_constraintVertical_bias="0.037" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_specialCharacters"
        style="@style/txtOptions"
        android:layout_width="304dp"
        android:layout_height="45dp"
        android:text="@string/specialCharacters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_number"
        app:layout_constraintVertical_bias="0.046" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_avoidRepetitions"
        style="@style/txtOptions"
        android:layout_width="304dp"
        android:layout_height="45dp"
        android:text="@string/onlyDifferent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_specialCharacters"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textViewLength"
        style="@style/txtOptions"
        android:layout_width="304dp"
        android:layout_height="40dp"
        android:text="@string/length"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_avoidRepetitions"
        app:layout_constraintVertical_bias="0.069" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="304dp"
        android:layout_height="45dp"
        android:stepSize="1"
        android:value="8"
        android:valueFrom="1"
        android:valueTo="100"
        app:layout_constraintBottom_toTopOf="@+id/button_generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLength"
        app:layout_constraintVertical_bias="0.166" />

    <Button
        android:id="@+id/button_generate"
        android:layout_width="305dp"
        android:layout_height="53dp"
        android:layout_marginBottom="148dp"
        android:background="@color/purple"
        android:text="@string/generate"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/passwordField"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:background="@color/yellow"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_generate"
        app:layout_constraintVertical_bias="0.617"
        android:visibility="invisible"
        android:padding="8dp">

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:autoSizeTextType="uniform" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/copyIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/copy_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordField"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>